@@ -1,10 +1,15 @@
 
-                CHANGES IN party VERSION x.y-z (yyyy-mm-dd)
+
+                CHANGES IN party VERSION 0.9-0 (yyyy-mm-dd)
 
     o    node_barplot() can now also draw stacked barplots.
 
     o    simplify handling of ordinal variables. It is now possible
-         to have multiple ordinal response variables.
+         to have multiple (ordinal) response variables.
+
+    o    some documentation updates
+
+    o    fix problems with NA handling for factors
 
 
                 CHANGES IN party VERSION 0.8-8 (2006-08-23)
